[gd_scene load_steps=6 format=3 uid="uid://dbbjh1nfeajhp"]

[ext_resource type="Script" path="res://src/assets/B4/Numpad.gd" id="1_es3hv"]
[ext_resource type="PackedScene" uid="uid://bcqv5rg2155im" path="res://src/assets/B4/KeypadLock_BodyNineKeys.glb" id="2_1snae"]
[ext_resource type="PackedScene" uid="uid://c2g6qwu3lt1f8" path="res://src/assets/B4/KeypadLock_ThreeScratched.glb" id="3_4w303"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="3_h3jhr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ctgps"]
size = Vector3(0.0631104, 0.162079, 0.154381)

[node name="Numpad" type="Node3D"]
script = ExtResource("1_es3hv")

[node name="KeypadLock_BodyNineKeys" parent="." instance=ExtResource("2_1snae")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.16132, 0)

[node name="KeypadLock_ThreeScratched" parent="." instance=ExtResource("3_4w303")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0.301175, -1.30089, 0)
visible = false

[node name="Numpad1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.290639, 0.160067)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad1"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.290814, 0.000246301)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad2"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.290835, -0.161277)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad3"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0830122, 0.161853)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad4"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad5" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0830122, 0.00025399)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad5"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad6" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0830122, -0.158782)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad6"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad7" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151737, 0.155303)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad7"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad8" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15173, -0.00532298)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad8"]
shape = SubResource("BoxShape3D_ctgps")

[node name="Numpad9" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15173, -0.161823)
collision_layer = 5242881
script = ExtResource("3_h3jhr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Numpad9"]
shape = SubResource("BoxShape3D_ctgps")

[connection signal="pointer_event" from="Numpad1" to="." method="_on_numpad_1_pointer_event"]
[connection signal="pointer_event" from="Numpad2" to="." method="_on_numpad_2_pointer_event"]
[connection signal="pointer_event" from="Numpad3" to="." method="_on_numpad_3_pointer_event"]
[connection signal="pointer_event" from="Numpad4" to="." method="_on_numpad_4_pointer_event"]
[connection signal="pointer_event" from="Numpad5" to="." method="_on_numpad_5_pointer_event"]
[connection signal="pointer_event" from="Numpad6" to="." method="_on_numpad_6_pointer_event"]
[connection signal="pointer_event" from="Numpad7" to="." method="_on_numpad_7_pointer_event"]
[connection signal="pointer_event" from="Numpad8" to="." method="_on_numpad_8_pointer_event"]
[connection signal="pointer_event" from="Numpad9" to="." method="_on_numpad_9_pointer_event"]

[editable path="KeypadLock_BodyNineKeys"]
